[gd_scene load_steps=7 format=2]

[ext_resource path="res://interactable_scripts/base/InteractionArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://interactable_scripts/DialogInteraction.gd" type="Script" id=2]
[ext_resource path="res://actor_states/ManagedState.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/PlayerManagedStateManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 24.0

[node name="DialogInteraction" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogNode" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="InteractionArea" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="InteractionArea" index="0"]
shape = SubResource( 1 )

[node name="PlayerManagedStateManager" parent="." instance=ExtResource( 4 )]
managed_state = ExtResource( 3 )
face_target_node_path = NodePath("..")
[connection signal="interacted" from="InteractionArea" to="." method="_on_InteractionArea_interacted"]

[editable path="InteractionArea"]
